Correct button alignment on the lesson continue page
The changes are specific for the page-mod-lesson-continue so they don't influence other pages.

Related ToDo: KommIT: extra padding on buttons in lesson activity
https://basecamp.com/2124401/projects/5787990/todos/123640016#comment_197382835

--- a/theme/kommit/less/theme/modules.less
+++ b/theme/kommit/less/theme/modules.less
@@ -280,6 +280,13 @@ a.autolink.glossary {
                 }
             }
         }
+        .singlebutton {
+            form  {
+                input[type=submit] {
+                    margin: 0;
+                }
+            }
+        }
     }
     @media (max-width: 767px) {
         div[role=main] {
